--- a/client/float-grid.css
+++ b/client/float-grid.css
@@ -54,12 +54,21 @@
 
 
 
+
+
+
+
+
 /*
   nav text, hide on mobile
 */
 .navSpan{
   display:none;
 }
+
+
+
+
 
 
 
@@ -89,11 +98,20 @@
     width: 100px;
   }
 
-
-
   .icon{
     display: none;
   }
+
+
+
+
+  .dashWrapper{
+    margin-left: 100px;
+    padding: 5px;
+  }
+
+
+
 
   /* 3 columns, 3/12 in % */
   .col-3 {
