--- a/client/cssGrid.css
+++ b/client/cssGrid.css
@@ -84,7 +84,13 @@ mid-screens-size resizing
 
 /* Non-mobile, grid */
 @media only screen and (min-width: 640px) {
-  
+  /*
+    Move dashboard below the header
+  */
+  .dashWrapper{
+    padding-top: 50px;
+  }
+
   /*
   GRID SETTINGS
   */
