comments padding on all grid classes.

--- a/client/cssGrid.css
+++ b/client/cssGrid.css
@@ -44,8 +44,8 @@
    * Half a gutter is 10px, 10/960 (context) = 1.041666%
    *
    */
-  padding-left: 1.04166666%;
-  padding-right: 1.04166666%;
+  /*padding-left: 1.04166666%;
+  padding-right: 1.04166666%;*/
 }
 
 
