--- a/client/cssGrid.css
+++ b/client/cssGrid.css
@@ -8,7 +8,7 @@
   margin: 0;
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 1000px;
+  max-width: 1200px;
   grid-template-columns: 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33%;
 }
 
@@ -88,7 +88,7 @@ mid-screens-size resizing
     Move dashboard below the header
   */
   .dashWrapper{
-    padding-top: 50px;
+    padding: 50px 10px 0 10px;
   }
 
   /*
