--- a/client/components/ResponsiveWrapper/wrapper.css
+++ b/client/components/ResponsiveWrapper/wrapper.css
@@ -1,5 +1,5 @@
 .Responsive-wrapper{
-	border: 1px solid royalblue;
+	/*border: 1px solid royalblue;*/
 	text-align: center;
 	margin-bottom: 25px;
 }
