--- a/client/components/NoteTypePercents/index.css
+++ b/client/components/NoteTypePercents/index.css
@@ -1,6 +1,6 @@
 .noteTypePercents{
 	height: 450px;
-	border: 1px solid limegreen;
+	/*border: 1px solid limegreen;*/
 	width: 100%;
 	overflow: visible;
 }
