--- a/client/cssGrid.css
+++ b/client/cssGrid.css
@@ -12,6 +12,16 @@
   grid-template-columns: 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33%;
 }
 
+.gr8row {
+  margin-top: 100px;
+  display: grid;
+  margin: 0;
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 1200px;
+  grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
+}
+
 
 /* Grid measurements:
  *
@@ -36,9 +46,7 @@
   gr-specific padding
 */
 
-.gr-2-3, .gr-3, .gr-4, .gr-6, .gr-12 {
-
-  /* Gutters:
+  /* Working with 'Gutters':
    * Each column is padded by half-a-gutter on each side,
    *
    * Half a gutter is 10px, 10/960 (context) = 1.041666%
@@ -46,7 +54,6 @@
    */
   /*padding-left: 1.04166666%;
   padding-right: 1.04166666%;*/
-}
 
 
 /*
@@ -57,6 +64,10 @@ Grid Layout
   grid-column-end: span 12;
 }
 
+
+.gr8-1-2{
+  grid-column-end: span 2;
+}
 
 
 
@@ -73,6 +84,9 @@ mid-screens-size resizing
     grid-column-end: span 6;
   }
 
+  .gr8-1-2{
+    grid-column-end: span 1;
+  }
 
 }
 
