some beat-text styling.

--- a/client/components/BeatCounts/index.css
+++ b/client/components/BeatCounts/index.css
@@ -1,3 +1,11 @@
 .beatNumber{
 	display: inline-block;
 }
+
+.beatTextVal{
+  stroke: black;
+  fill: black;
+  border: 1px solid green;
+  font-size: 36px;
+  text-anchor: middle;
+}
