Changes number style

--- a/client/containers/BeatCounts/index.css
+++ b/client/containers/BeatCounts/index.css
@@ -3,9 +3,10 @@
 }
 
 .beatTextVal{
-  stroke: black;
-  fill: black;
-  border: 1px solid green;
-  text-anchor: middle;
-  font-family: futura;
+    stroke: black;
+    stroke-width: 3px;
+    fill: none;
+    border: 1px solid green;
+    text-anchor: middle;
+    font-family: futura;
 }
